# msc

./: Cargo.toml  LANGUAGE.md  README.md
examples/: fibonacci.msc  fibonacci_80.msc  no_std.rs  polynomial.msc  van_eck.msc
lib/: build.rs  comparator.rs  deflector.rs  instruction.rs  io.rs  lib.rs  load.rs  machine.rs  number.rs  operator.rs  plane.rs  stack.rs
src/: main.rs
